Bug 1226931: [MSE] Restrict leeway to append window start. r=gerald.

We only allow a leeway if the append window start is set to its default value (0)